set height to 100vh

--- a/pricingplan/app.css
+++ b/pricingplan/app.css
@@ -48,7 +48,7 @@ table {
 }
 
 body {
-    height: 1080px;
+    height: 100vh;
     background-color: royalblue;
     font-family: 'Open Sans';
     font-weight: 700;
